--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -123,7 +123,7 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
 }
 
 .item-hover span:last-child {
-    right: 10px;
+    right: 50px;
     top: 5px;
 }
 
@@ -169,3 +169,14 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
 .buttons .dropdown-menu {
    border-radius: 10px;
 }
+.snippetActions span{
+    cursor: pointer;
+}
+
+.popup a img{
+    vertical-align: bottom;
+}
+//.labelAction a span{
+//    vertical-align: middle;
+//}
+
