--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -225,7 +225,6 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
 
 .productivity-popup {
     width: 680px;
-    height: 411px;
 }
 
 .productivity-popup .productivity-popup-header-title {
@@ -238,8 +237,13 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
     width: 200px;
     border-radius: 10px;
 }
+
 .productivity-popup .score .score-value {
     font-size: 24px;
+    font-weight: 700;
+}
+
+.daily .score-value {
     font-weight: 700;
 }
 
@@ -344,10 +348,12 @@ label:not(.form-check-label):not(.custom-file-label) {
 .multiselect__option--selected {
     font-weight: normal;
 }
+
 .default-tabs {
     position: relative;
     margin: 0 auto;
     border-bottom: 1px solid #B8B8B8;
+
     &__item {
         display: inline-block;
         padding: 20px 0;
@@ -362,22 +368,28 @@ label:not(.form-check-label):not(.custom-file-label) {
         border-bottom: 2px solid transparent;
         cursor: pointer;
         transition: all 0.25s;
+
         &_active {
             color: black;
         }
+
         &:hover {
             color: black;
         }
+
         &:focus {
             outline: none;
         }
+
         &:first-child {
             margin-left: 0;
         }
+
         &:last-child {
             margin-right: 0;
         }
     }
+
     &__active-line {
         position: absolute;
         bottom: -5px;
@@ -386,11 +398,26 @@ label:not(.form-check-label):not(.custom-file-label) {
         height: 8px;
         background-image: url('/assets/images/Rectangle 119.svg');
         background-repeat: no-repeat;
-        transform: translateX(0px);
+        transform: translateX(0);
         transition: transform 0.4s ease, width 0.4s ease;
     }
 }
-.content {
+
+.content .daily-content {
     margin-top: 30px;
     font-size: 20px;
+}
+
+.weekly-score thead th {
+    color: #B8B8B8;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.borderless tbody td {
+    padding: 0.50rem;
+}
+
+.borderless tbody td, .borderless thead th {
+    border: none;
 }
