--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,7 +20,7 @@ html, body {
 }
 
 a, p, span, label, button {
-    font-size: 13px;
+    font-size: 14px;
 }
 
 body {
@@ -37,7 +37,7 @@ a:hover {
 }
 
 .login-continue {
-    font-size: 16px;
+    font-size: 18px;
     color: #B8B8B8;
     margin: 20px 0 30px 0;
     font-weight: 500;
@@ -75,7 +75,7 @@ a:hover {
 }
 
 .auth-section {
-    padding-top: 30px;
+    padding-top: 100px;
 }
 
 #password {
@@ -92,7 +92,7 @@ a:hover {
     border: none;
     border-radius: 10px;
     width: 170px;
-    height: 45px;
+    height: 50px;
     font-size: 13px;
 }
 
@@ -113,8 +113,7 @@ a:hover {
 .form-group input.form-control {
     border-radius: 10px;
     border: none;
-    background-color: #F5F5F5;
-    height: 45px;
+    height: 50px;
 }
 
 .password-group {
@@ -124,7 +123,7 @@ a:hover {
 .password-group i {
     position: absolute;
     right: 18px;
-    top: 14px;
+    top: 17px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -141,11 +140,11 @@ a:hover {
     border: none;
     background-color: #F5F5F5;
     border-radius: 10px;
-    height: 45px;
+    height: 50px;
 }
 
 .auth-content {
-    width: 430px;
+    width: 450px;
     padding: 0 10px;
     margin: 0 auto;
 }
@@ -204,7 +203,7 @@ a:hover {
     background: #f5f5f5;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    height: 45px;
+    height: 50px;
     font-size: 13px;
 }
 
@@ -291,8 +290,11 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
 }
 
 .item-hover span:first-child {
-    left: -10px;
+    left: 7px;
     top: 5px;
+}
+.item-hover span[role=button]{
+    left: -10px;
 }
 
 .item-hover span:last-child {
@@ -383,7 +385,7 @@ body:not(.sidebar-mini-md) .content-wrapper, body:not(.sidebar-mini-md) .main-fo
 }
 
 .productivity-popup {
-    width: 680px;
+    width: 550px;
 }
 
 .productivity-popup .productivity-popup-header-title {
@@ -414,6 +416,10 @@ mr-3 {
     font-weight: normal;
 }
 
+.card {
+    border-radius: 10px
+}
+
 
 .more-category .dropdown-item:hover, .dropdown-item:focus {
     color: initial;
@@ -428,17 +434,17 @@ mr-3 {
     border-radius: 10px;
     border: none;
     background-color: #fff;
+    height: 50px;
 }
 
 .multiselect .multiselect__select {
-    //height: 58px;
+    top: 6px;
 }
 
 .multiselect .multiselect__tags {
     border: none;
     display: inline-block;
-    height: 58px;
-    line-height: 38px;
+    padding: 7px 40px 0 7px;
 }
 
 .multiselect .multiselect__single {
@@ -451,11 +457,11 @@ mr-3 {
 }
 
 .multiselect .multiselect__tags-wrap .multiselect__tag {
-    margin: 0 10px 0 0;
-    padding: 10px;
+    margin: 0 7px 0 0;
+    padding: 8px;
     background-color: #F5F5F5;
     color: #3D3D3D;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 16px;
 }
 
@@ -463,10 +469,12 @@ mr-3 {
     content: "";
     display: inline-block;
     background-image: url(/assets/images/label_icon.svg);
-    width: 30px;
-    height: 23px;
+    width: 20px;
+    height: 20px;
     background-repeat: no-repeat;
     vertical-align: middle;
+    background-size: contain;
+    margin-right: 8px;
 }
 
 .multiselect__tag-icon:hover {
