--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -239,6 +239,11 @@ a:hover {
     background: #C3C3C3;
 }
 
+.separateModal .form-group .form-control {
+    background: #F5F5F5;
+    border-radius: 10px;
+}
+
 .delete-button {
     background-color: #DB4C3F;
     color: white;
@@ -494,7 +499,7 @@ mr-3 {
 
 .multiselect .multiselect__tags {
     border: none;
-    display: inline-block;
+    display: block;
     padding: 7px 40px 0 7px;
 }
 
@@ -637,6 +642,64 @@ mr-3 {
 
 .borderless tbody td, .borderless thead th {
     border: none;
+}
+
+//dropdowns
+.permissionDropdown {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 14px;
+}
+
+.permissionAddon {
+    position: relative;
+}
+
+.member_permission .dropdown-menu {
+    border-radius: 10px;
+}
+
+.member_permission .dropdown-menu .dropdown-item {
+    padding: 10px 25px;
+}
+
+.permissionAddon .drop-addon {
+    position: absolute;
+    right: 13px;
+    top: 13px;
+}
+
+.category-colors span i {
+    font-size: 38px;
+    margin: 0 10px 20px;
+}
+
+.discard a {
+    color: #DB4C3F;
+}
+
+.separateModal {
+    height: 100vh;
+    background: #C3C3C3;
+}
+
+.separateModal .card-body {
+    padding: 30px;
+}
+
+.separateModal .title {
+    font-size: 32px;
+    margin-bottom: 13px;
+}
+
+
+.owner {
+    color: #DB4C3F
+}
+
+.members .member {
+    margin-top: 15px;
 }
 
 //settings sidebar
@@ -926,6 +989,7 @@ mr-3 {
     border-top: none;
     font-size: 14px;
 }
+
 .reports-page .weekly-score tbody tr td {
     font-size: 14px;
 }
@@ -934,6 +998,7 @@ mr-3 {
     color: #DB4C3F;
     font-size: 15px;
 }
+
 .reports-page .active-user-report span i:after {
     width: 22px;
     height: 22px;
@@ -944,4 +1009,41 @@ mr-3 {
     top: 14px;
     position: absolute;
     cursor: pointer;
+}
+
+//team Members
+
+.members-page .members-table thead tr th {
+    color: initial;
+    font-weight: 700;
+    border-top: none;
+    font-size: 14px;
+    padding-left: 0;
+}
+
+.members-page .members-table tbody tr td {
+    font-size: 14px;
+    padding-left: 0;
+}
+
+.members-page .members-table tbody td .member-action-buttons {
+    cursor: pointer;
+}
+
+.members-page .members-top span {
+    vertical-align: middle;
+    margin-left: 10px;
+    font-weight: 700;
+}
+
+.members-page .members-top > div {
+    margin-right: 50px;
+}
+
+.members-page .members-top .invite-user-button {
+    background: #DB4C3F;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 20px;
 }
